Fix T63063: solidify modifier crash after recent changes.

It should not assume there to be an origindex layer. Checked other modifiers
and they all seem to explicitly create it or verify if it's NULl.